--- a/ActivityDemo/app/src/main/AndroidManifest.xml
+++ b/ActivityDemo/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <activity android:name=".ExplicitActivity"
-            android:process=":xExplicitActivity"
+            android:process=":ExplicitActivity"
 
             >
 
