--- a/ActivityDemo/app/src/main/AndroidManifest.xml
+++ b/ActivityDemo/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:process=":MainApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -21,8 +22,7 @@
 
         <activity
             android:name=".ExplicitActivity"
-            android:process=":ExplicitActivity"
-            >
+            android:process=":ExplicitActivity">
 
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
@@ -31,14 +31,24 @@
 
         <activity
             android:name=".ImplicitActivity"
-            android:process=":ImplicitActivity"
             android:launchMode="singleInstance"
-            >
+            android:process=":ImplicitActivity">
             <intent-filter>
                 <action android:name="com.example.xuwanjin.activitydemo.implicitactivity" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".StartFromBackgroundActivity"
+            android:launchMode="singleInstance"
+            android:process=":BackgroundActivity">
+
+        </activity>
+
+        <service android:name=".BackgroundService">
+
+        </service>
+
 
     </application>
 
