add start for result activity
Signed-off-by: xuwanjin <xuwanjin1991@Gmail.com>

--- a/ActivityDemo/app/src/main/AndroidManifest.xml
+++ b/ActivityDemo/app/src/main/AndroidManifest.xml
@@ -47,11 +47,17 @@
 
         <service
             android:name=".BackgroundService"
-            android:process=":BackgroundService"
-            >
+            android:process=":BackgroundService">
 
         </service>
 
+
+        <activity
+            android:name=".StartForResultActivity"
+            android:launchMode="singleTop"
+            android:process=":StartForResultActivity">
+
+        </activity>
 
     </application>
 
