modify for  start for result activity
Signed-off-by: xuwanjin <xuwanjin1991@Gmail.com>

--- a/ActivityDemo/app/src/main/AndroidManifest.xml
+++ b/ActivityDemo/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
 
         <activity
             android:name=".ExplicitActivity"
-            android:process=":ExplicitActivity">
+            android:process=":ExplicitActivity"
+            android:documentLaunchMode="intoExisting"
+            android:multiprocess="true"
+            android:launchMode="singleTop"
+            >
 
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
