Change MainActivity to NotificationDemoActivity
Signed-off-by: xuwanjin <xuwanjin1991@Gmail.com>

--- a/ActivityDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/ActivityDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,8 @@
-#Sun Jun 11 08:24:07 CST 2017
+#Fri Jun 16 19:39:35 CST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-milestone-1-all.zip
+org.gradle.jvmargs=-Xmx2048m
+org.gradle.caching=true
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-rc-1-all.zip
