--- a/ActivityDemo/app/src/main/AndroidManifest.xml
+++ b/ActivityDemo/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".MainActivity"
+            android:name=".NotificationDemoActivity"
             android:process=":MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,9 +23,8 @@
         <activity
             android:name=".ExplicitActivity"
             android:process=":ExplicitActivity"
-            android:documentLaunchMode="intoExisting"
             android:multiprocess="true"
-            android:launchMode="singleTop"
+            android:launchMode="singleTask"
             >
 
             <intent-filter>
@@ -44,7 +43,7 @@
         </activity>
         <activity
             android:name=".StartFromBackgroundActivity"
-            android:launchMode="singleInstance"
+            android:launchMode="singleTask"
             android:process=":BackgroundActivity">
 
         </activity>
