--- a/ActivityDemo/app/src/main/AndroidManifest.xml
+++ b/ActivityDemo/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".NotificationDemoActivity"
+            android:name=".ActivityDemoActivity"
             android:process=":MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
